// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.compliance.config;
option go_package = "github.com/chef/automate/api/config/compliance";

import "api/config/shared/global.proto";
import "api/config/shared/tls.proto";
import "components/automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "compliance-service"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Service service = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;
			Profiles profiles = 4;
			Storage storage = 5;
			Logger logger = 6;
			Retention retention = 7;
			reserved 8;
			reserved 9;
			Agent agent = 10;

			message Service {
				google.protobuf.StringValue host = 1;
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10121, protocol: "grpc" } ];
				google.protobuf.StringValue external_fqdn = 7;
			}

			message Profiles {
				reserved 1;
			}

			message Storage {
				reserved 3;
				google.protobuf.StringValue database = 1;
				google.protobuf.StringValue user = 2;
			}

			message Logger {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}

			message Retention {
				google.protobuf.Int32Value compliance_report_days = 1;
			}

			message Agent {
				google.protobuf.Int32Value workers = 1;
				google.protobuf.Int32Value buffer_size = 2;
				google.protobuf.StringValue remote_inspec_version = 3;
			}
		}

		message Service {
		}
	}
}
